[gd_scene load_steps=3 format=3 uid="uid://drkht5jkdqi57"]

[ext_resource type="Script" uid="uid://cilcxfmea0s47" path="res://entities/towers/projectileTower/bullet/base_bullet.gd" id="1_brm3f"]

[sub_resource type="CircleShape2D" id="CircleShape2D_rsntj"]

[node name="BaseBullet" type="Node2D"]
script = ExtResource("1_brm3f")
speed = 1200.0
pierce = 2
time = 2.0

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("CircleShape2D_rsntj")

[node name="DespawnTimer" type="Timer" parent="."]
one_shot = true
autostart = true

[node name="ColorRect" type="ColorRect" parent="."]
offset_left = -3.0
offset_top = -3.0
offset_right = 3.0
offset_bottom = 3.0
color = Color(1, 0.765, 0.060000002, 1)

[connection signal="area_entered" from="Area2D" to="." method="_on_area_2d_area_entered"]
[connection signal="timeout" from="DespawnTimer" to="." method="_on_despawn_timer_timeout"]
